--- a/views/camps/edit.ejs
+++ b/views/camps/edit.ejs
@@ -1,27 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('./layouts/template') %>
+    <div class="row">
+        <h1 class="text-center">Update <%= camp.title %>
+        </h1>
+        <div class="col-6 offset-3">
+            <form action="/camps/<%= camp._id %>?_method=PATCH" method="post">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Enter Title</label>
+                    <input class="form-control" type="text" required id="title" placeholder="Enter Name" name="title"
+                        value="<%= camp.title %>">
+                </div>
+                <div class="row">
+                    <div class="col-7 mb-3">
+                        <label class="form-label" for="location">Enter Location</label>
+                        <input class="form-control" type="text" required id="location" placeholder="Enter Location"
+                            name="location" value="<%= camp.location %>">
+                    </div>
+                    <div class="col-5 mb-3">
+                        <label class="form-label" for="price">CampGround Price</label>
+                        <div class="input-group">
+                            <span class="input-group-text">$</span>
+                            <input type="number" class="form-control" placeholder="0.00" name="price" id="price"
+                                value="<%= camp.price %>">
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image URL</label>
+                    <input class="form-control" type="text" required id="image" placeholder="Enter Image URL"
+                        name="image" value="<%= camp.image %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Enter Description</label>
+                    <textarea class="form-control" type="text" id="description"
+                        name="description"><%= camp.description %> </textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary" type="submit">Update</button>
+                    <a class="btn btn-danger mx-2" href="/camps/<%= camp._id %>"> Cancel</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    </body>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Camp</title>
-</head>
-
-<body>
-    <h1>Update Camp</h1>
-    <form action="/camps/<%= camp._id %>?_method=PATCH" method="post">
-        <label for="title">Enter Title: </label>
-        <input type="text" required id="title" placeholder="Enter Name" name="title" value="<%= camp.title %>">
-        <label for="description">Enter Description: </label>
-        <input type="text" required id="description" placeholder="Enter Description" name="description"
-            value="<%= camp.description %>">
-        <label for="location">Enter Location: </label>
-        <input type="text" required id="location" placeholder="Enter Location" name="location"
-            value="<%= camp.location %>">
-        <button type="submit">Update</button>
-    </form>
-    <a href="/camps/<%= camp._id %>">Cancel</a>
-</body>
-
-</html>
+    </html>
