--- a/views/camps/index.ejs
+++ b/views/camps/index.ejs
@@ -1,23 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Camps</title>
-</head>
-
-<body>
+<% layout('./layouts/template') %>
     <h2>All Camp Grounds</h2>
-    <ul>
-        <% for(camp of camps) { %>
-            <li>
-               <a href="/camps/<%= camp._id %> "> <%= camp.title %></a>
-            </li>
-            <% } %>
-    </ul>
     <a href="/camps/new">Add New Camp</a>
-</body>
 
-</html>
+    <% for(camp of camps) { %>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" src="<%= camp.image %> " alt="Camp Image">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= camp.title %> 
+                        </h5>
+                        <p class="card-text">
+                            <%= camp.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= camp.location %>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/camps/<%= camp._id %>">View <%= camp.title %></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <% } %>
