--- a/views/camps/newCamp.ejs
+++ b/views/camps/newCamp.ejs
@@ -1,21 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Camp</title>
-</head>
-<body>
-    <h1>Add New Camp</h1>
-    <form action="/camps" method="post">
-        <label for="title">Enter Title: </label>
-        <input type="text" required id="title" placeholder="Enter Name" name="title">
-        <label for="description">Enter Description: </label>
-        <input type="text" required id="description" placeholder="Enter Description" name="description">
-        <label for="location">Enter Location: </label>
-        <input type="text" required id="location" placeholder="Enter Location" name="location">
-        <button type="submit">Submit</button>
-    </form>
-</body>
-</html>
+<% layout('./layouts/template') %>
+    <div class="row">
+        <h1 class="text-center">Add New Camp Ground</h1>
+        <div class="col-6 offset-3">
+            <form action="/camps" method="post">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Enter Title: </label>
+                    <input class="form-control" type="text" required id="title" placeholder="Enter Name" name="title">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Enter Location: </label>
+                    <input class="form-control" type="text" required id="location" placeholder="Enter Location"
+                        name="location">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="price">CampGround Price </label>
+                    <div class="input-group">
+                        <span class="input-group-text">$</span>
+                        <input type="number" class="form-control" placeholder="0.00" name="price" id="price">
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image URL </label>
+                    <input class="form-control" type="text" required id="image" placeholder="Enter Image URL"
+                        name="image">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Enter Description: </label>
+                    <textarea class="form-control" type="text" required id="description" placeholder="Enter Description"
+                        name="description"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+            </form>
+            <form action="/camps" method="GET">
+                <button class="btn btn-danger" type="submit">Cancel</button>
+            </form>
+        </div>
+    </div>
+    </body>
+
+    </html>
