--- a/views/camps/view.ejs
+++ b/views/camps/view.ejs
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camp</title>
-</head>
-
-<body>
+<% layout('./layouts/template') %>
     <h1>
         <%= camp.title %>
     </h1>
-    <h3>
-        <%= camp.description%>, <%= camp.location %>
-    </h3>
+    <img src="<%= camp.image %>" alt="Camp Image">
+    <h4>
+        <%= camp.price%>,<%= camp.description%> 
+    </h4>
+    <h4> <%= camp.location %></h4>
     <a href="/camps/<%= camp.id %>/edit">Edit Camp Ground</a>
+    <a href="/camps">All Camp Ground</a>
     <form action="/camps/<%= camp._id %>?_method=DELETE" method="POST">
         <button type="submit">Delete</button>
     </form>
-</body>
-
-</html>
+    
