--- a/views/camps/edit.ejs
+++ b/views/camps/edit.ejs
@@ -1,25 +1,29 @@
 <% layout('./layouts/template') %>
     <div class="row">
+        <div class="alert alert-warning" role="alert">
+            This is test app. Use valid image URL.
+            Ex:https://picsum.photos/300
+          </div>
         <h1 class="text-center">Update <%= camp.title %>
         </h1>
         <div class="col-6 offset-3">
             <form action="/camps/<%= camp._id %>?_method=PATCH" method="post">
                 <div class="mb-3">
                     <label class="form-label" for="title">Enter Title</label>
-                    <input class="form-control" type="text" required id="title" placeholder="Enter Name" name="title"
-                        value="<%= camp.title %>">
+                    <input class="form-control" type="text" required id="title" placeholder="Enter Name"
+                        name="camp[title]" value="<%= camp.title %>">
                 </div>
                 <div class="row">
-                    <div class="col-7 mb-3">
+                    <div class="col-lg-7 col-md-12 mb-3">
                         <label class="form-label" for="location">Enter Location</label>
                         <input class="form-control" type="text" required id="location" placeholder="Enter Location"
-                            name="location" value="<%= camp.location %>">
+                            name="camp[location]" value="<%= camp.location %>">
                     </div>
-                    <div class="col-5 mb-3">
+                    <div class="col-lg-5 col-md-12 mb-3">
                         <label class="form-label" for="price">CampGround Price</label>
                         <div class="input-group">
                             <span class="input-group-text">$</span>
-                            <input type="number" class="form-control" placeholder="0.00" name="price" id="price"
+                            <input type="number" class="form-control" placeholder="0.00" name="camp[price]" id="price"
                                 value="<%= camp.price %>">
                         </div>
                     </div>
@@ -27,12 +31,12 @@
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL</label>
                     <input class="form-control" type="text" required id="image" placeholder="Enter Image URL"
-                        name="image" value="<%= camp.image %>">
+                        name="camp[image]" value="<%= camp.image %>">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Enter Description</label>
                     <textarea class="form-control" type="text" id="description"
-                        name="description"><%= camp.description %> </textarea>
+                        name="camp[description]"><%= camp.description %> </textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-primary" type="submit">Update</button>
