--- a/views/camps/view.ejs
+++ b/views/camps/view.ejs
@@ -1,6 +1,6 @@
 <% layout('./layouts/template') %>
-    <div class="row mb-2">
-        <div class="col-8 offset-2">
+    <div class="row mb-3">
+        <div class="col-6">
             <div class="card">
                 <img class="card-img-top" src="<%= camp.image %> " alt="Card image cap">
                 <div class="card-body">
@@ -27,6 +27,42 @@
                     <a href="/camps/<%= camp._id%>/edit" class="btn btn-info mx-2">Update</a>
                     <a href="/camps" class="btn btn-success">All Camps</a>
                 </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="row my-4">
+                <h3>Leave a Review</h3>
+                <form action="/camps/<%= camp._id %>/reviews" method="POST">
+                    <div class="form-group mb-3">
+                        <label class="form-label" for="rating">Rating</label>
+                        <input type="range" class="form-range" min="1" max="5" step="1" id="rating"
+                            name="review[rating]">
+                        <label class="form-label" for="review">Review</label>
+                        <textarea class="form-control" rows="4" id="review" name="review[body]"></textarea>
+                    </div>
+                    <button class="btn btn-success">Submit</button>
+                </form>
+            </div>
+            <div>
+                <% if (camp.reviews.length) {%>
+                    <h3>Reviews</h3>
+                    <% } %>
+                        <% for(review of camp.reviews) { %>
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <h6 class="card-subtitle mb-2">
+                                        <%= review.rating %>
+                                    </h6>
+                                    <p class="card-text">
+                                        <%= review.body %>
+                                    </p>
+                                    <form action="/camps/<%= camp._id%>/reviews/<%= review._id%>?_method=DELETE"
+                                        method="POST">
+                                        <button class="btn btn-sm btn-danger">Delete</button>
+                                    </form>
+                                </div>
+                            </div>
+                            <% } %>
             </div>
         </div>
     </div>
