--- a/views/layouts/template.ejs
+++ b/views/layouts/template.ejs
@@ -15,6 +15,7 @@
     <%- include('../partials/navbar')%>
 
         <main class="container mt-4">
+            <%- include('../partials/flashMsg')%>
             <%- body %>
         </main>
 
@@ -26,23 +27,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
                 integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
                 crossorigin="anonymous"></script>
-            <script>
-                (function () {
-                    'use strict'
-                    var forms = document.querySelectorAll('.form-validation')
-                    Array.prototype.slice.call(forms)
-                        .forEach(function (form) {
-                            form.addEventListener('submit', function (event) {
-                                if (!form.checkValidity()) {
-                                    event.preventDefault()
-                                    event.stopPropagation()
-                                }
-
-                                form.classList.add('was-validated')
-                            }, false)
-                        })
-                })()
-            </script>
+            <script src="/javascripts/formValidation.js"></script>
 </body>
 
 </html>
