Code Refactoring and Added Controllers

--- a/views/camps/newCamp.ejs
+++ b/views/camps/newCamp.ejs
@@ -54,10 +54,8 @@
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-primary" type="submit">Submit</button>
+                    <a href="/camps" class="btn btn-danger mx-2">Cancel</a>
                 </div>
-            </form>
-            <form action="/camps" method="GET">
-                <button class="btn btn-danger" type="submit">Cancel</button>
             </form>
         </div>
     </div>
