--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,14 @@
                 <a class="nav-link" href="/camps">All Camp Grounds</a>
                 <a class="nav-link" href="/camps/new">Add New Camp</a>
             </div>
+            <div class="navbar-nav d-flex" style="align-items:right;">
+                <% if(!currentUser) { %>
+                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/register">Register</a>
+                <% } else { %>
+                    <a class="nav-link" href="/logout">Logout</a>
+                <% } %>
+            </div>
         </div>
     </div>
 </nav>
