--- a/views/camps/edit.ejs
+++ b/views/camps/edit.ejs
@@ -1,13 +1,9 @@
 <% layout('./layouts/template') %>
     <div class="row">
-        <div class="alert alert-warning" role="alert">
-            This is test app. Use valid image URL.
-            Ex:https://picsum.photos/300
-        </div>
-        <h1 class="text-center">Update <%= camp.title %>
-        </h1>
+        <h1 class="text-center">Edit Camp</h1>
         <div class="col-6 offset-3">
-            <form action="/camps/<%= camp._id %>?_method=PATCH" method="post" novalidate class="form-validation">
+            <form action="/camps/<%= camp._id %>?_method=PATCH" method="post" novalidate class="form-validation"
+                enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Enter Title</label>
                     <input class="form-control" type="text" required id="title" placeholder="Enter Name"
@@ -38,14 +34,6 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" required id="image" placeholder="Enter Image URL"
-                        name="camp[image]" value="<%= camp.image %>">
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class="mb-3">
                     <label class="form-label" for="description">Enter Description</label>
                     <textarea class="form-control" type="text" id="description"
                         name="camp[description]"><%= camp.description %> </textarea>
@@ -54,11 +42,29 @@
                     </div>
                 </div>
                 <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Add More Images</label>
+                    <input class="form-control" type="file" id="formFileMultiple" name="image" multiple>
+                </div>
+                <h6 class="text-center">Check Delete button to delete Images</h6>
+                <div class="mb-3">
+                    <% camp.image.forEach(function (img, index) { %>
+                        <div class="mb-3">
+                            <img src="<%= img.thumbnail %>" class="img-thumbnail">
+                            <div class="form-check-inline">
+                                <input type="checkbox" id="image-<%=index%>" name="deleteImage[]"
+                                    value="<%= img.fileName%>">
+                            </div>
+                            <label for="image-<%=index%>">Delete?</label>
+                        </div>
+                        <%}) %>
+                </div>
+                <div class="mb-3">
                     <button class="btn btn-primary" type="submit">Update</button>
                     <a class="btn btn-danger mx-2" href="/camps/<%= camp._id %>"> Cancel</a>
                 </div>
             </form>
         </div>
+    </div>
     </div>
     </body>
 
