--- a/views/camps/index.ejs
+++ b/views/camps/index.ejs
@@ -6,7 +6,7 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" src="<%= camp.image %> " alt="Camp Image">
+                    <img class="img-fluid" src="<%= camp.image[0].url %> " alt="Camp Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
