--- a/views/camps/view.ejs
+++ b/views/camps/view.ejs
@@ -3,7 +3,28 @@
     <div class="row mb-3">
         <div class="col-6">
             <div class="card">
-                <img class="card-img-top" src="<%=camp.image %> " alt="">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <% camp.image.forEach((img, index)=> { %>
+                            <div class="carousel-item <%= index === 0 ? 'active':''%>">
+                                <img src="<%=img.url%>" class="d-block w-100" alt="...">
+                            </div>
+                            <% }) %>
+                    </div>
+                    <% if(camp.image.length> 1) {%>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                        <% } %>
+                </div>
+
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= camp.title %>
@@ -46,8 +67,8 @@
                                 name="review[rating]"> -->
                             <div class="div mb-1">
                                 <fieldset class="starability-basic">
-                                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1"
-                                        checked aria-label="No rating." />
+                                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]"
+                                        value="1" checked aria-label="No rating." />
                                     <input type="radio" id="first-rate1" name="review[rating]" value="1" />
                                     <label for="first-rate1" title="Terrible">1 star</label>
                                     <input type="radio" id="first-rate2" name="review[rating]" value="2" />
