--- a/views/layouts/template.ejs
+++ b/views/layouts/template.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <style></style>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
     <title>YelpCamp</title>
 </head>
 
@@ -17,7 +17,7 @@
 
         <main class="container mt-4">
             <%- include('../partials/flashMsg')%>
-            <%- body %>
+                <%- body %>
         </main>
 
         <%- include('../partials/footer')%>
