--- a/views/camps/index.ejs
+++ b/views/camps/index.ejs
@@ -1,7 +1,6 @@
 <% layout('./layouts/template') %>
+    <div id="cluster-map" class="mb-5"></div>
     <h2>All Camp Grounds</h2>
-    <a href="/camps/new">Add New Camp</a>
-
     <% for(camp of camps) { %>
         <div class="card mb-3">
             <div class="row">
@@ -11,7 +10,7 @@
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">
-                            <%= camp.title %> 
+                            <%= camp.title %>
                         </h5>
                         <p class="card-text">
                             <%= camp.description %>
@@ -27,3 +26,10 @@
             </div>
         </div>
         <% } %>
+
+            <script>
+                const mapBoxToken = '<%- process.env.MAPBOX_TOKEN %>'
+                const campgrounds = { features: <%- JSON.stringify(camps) %>}
+            </script>
+
+            <script src="/javascripts/clusterMap.js"></script>
