--- a/views/camps/newCamp.ejs
+++ b/views/camps/newCamp.ejs
@@ -1,5 +1,5 @@
 <% layout('./layouts/template') %>
-    <div class="row">
+    <div class="row mt-3">
         <h1 class="text-center">Add New Camp Ground</h1>
         <div class="col-6 offset-3">
             <form action="/camps" method="post" novalidate class="form-validation" enctype="multipart/form-data">
@@ -7,18 +7,12 @@
                     <label class="form-label" for="title">Enter Title</label>
                     <input class="form-control" type="text" required id="title" placeholder="Enter Name"
                         name="camp[title]">
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-7 col-mg-12 mb-3">
                         <label class="form-label" for="location">Enter Location</label>
                         <input class="form-control" type="text" required id="location" placeholder="Enter Location"
                             name="camp[location]">
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
                     </div>
                     <div class="col-lg-5 col-mg-12 mb-3">
                         <label class="form-label" for="price">CampGround Price</label>
@@ -27,25 +21,16 @@
                             <input type="number" class="form-control" placeholder="0.00" name="camp[price]" id="price"
                                 required>
                         </div>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Enter Description</label>
                     <textarea class="form-control" type="text" required id="description" placeholder="Enter Description"
                         name="camp[description]"></textarea>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
                 </div>
-                <div class="form-file custom-file">
-                    <input type="file" class="form-file-input" id="image" name="image" multiple>
-                    <label class="form-file-label" for="image">
-                        <span class="form-file-text custom-file-label">Choose image(s)...</span>
-                        <span class="form-file-button">Browse</span>
-                    </label>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Upload Images</label>
+                    <input class="form-control" type="file" id="formFileMultiple" name="image" multiple required>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-primary" type="submit">Submit</button>
