--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,37 +1,34 @@
 <% layout('./layouts/template') %>
-    <h1 class="text-center">Register</h1>
-    <div class="col-6 offset-3">
-        <form action="/register" method="post" novalidate class="form-validation">
-            <div class="mb-3">
-                <label class="form-label" for="username">Username</label>
-                <input class="form-control" type="text" required id="username" placeholder="Username"
-                    name="user[username]">
-                <div class="valid-feedback">
-                    Looks good!
+    <div class="container d-flex justify-content-center align-items-center mt-3">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+                <div class="card shadow">
+                    <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                        alt="" class="card-img-top" />
+                    <div class="card-body">
+                        <h5 class="card-title">Register</h5>
+                        <form action="/register" method="POST" class="validated-form" novalidate>
+                            <div class="mb-3">
+                                <label class="form-label" for="username">Username</label>
+                                <input class="form-control" type="text" id="username" name="user[username]" required
+                                    autofocus>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="email">Email</label>
+                                <input class="form-control" type="email" id="email" name="user[email]" required>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="password">Password</label>
+                                <input class="form-control" type="password" id="password" name="user[password]"
+                                    required>
+                            </div>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-success btn-block">Register</button>
+                            </div>
+                        </form>
+
+                    </div>
                 </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="email">Email</label>
-                <input class="form-control" type="email" required id="email" placeholder="Email"
-                    name="user[email]">
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="password">Password</label>
-                <input class="form-control" type="password" required id="password" placeholder="Password"
-                    name="user[password]">
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-            </div>
-            <div class="mb-3">
-                <button class="btn btn-primary" type="submit">Submit</button>
-                <a href="/camps" class="btn btn-danger mx-2">Cancel </a>
-            </div>
-        </form>
-        <form action="/camps" method="GET">
-           
-        </form>
+        </div>
     </div>
