--- a/views/camps/view.ejs
+++ b/views/camps/view.ejs
@@ -1,7 +1,7 @@
 <% layout('./layouts/template') %>
     <link rel="stylesheet" href="/stylesheet/star.css">
     <div class="row mb-3">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 mb-3">
             <div class="card">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -56,7 +56,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
+            <h5 class="text-center">Map Location</h5>
             <div id='map' class="mb-4"></div>
             <% if(currentUser) { %>
                 <div class="row my-4">
