--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,5 +1,5 @@
 <% layout('./layouts/template') %>
-    <div class="container d-flex justify-content-center align-items-center mt-3">
+    <div class="container d-flex justify-content-center align-items-center my-3">
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
                 <div class="card shadow">
@@ -7,7 +7,7 @@
                         alt="" class="card-img-top" />
                     <div class="card-body">
                         <h5 class="card-title">Register</h5>
-                        <form action="/register" method="POST" class="validated-form" novalidate>
+                        <form action="/register" method="POST" class="form-validation" novalidate>
                             <div class="mb-3">
                                 <label class="form-label" for="username">Username</label>
                                 <input class="form-control" type="text" id="username" name="user[username]" required
